re PR c++/53995 (Overload resolution fails with enum argument, says <anonymous enum>)

PR c++/53995
	* decl.c (finish_enum_value_list): Only call
	insert_late_enum_def_into_classtype_sorted_fields in class scope.

From-SVN: r189599